# localtest

./: RENDER_DEPLOYMENT.md  deploy-config.env  env.example  install.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: audit.py  auth.py  comments.py  files.py  notification_preferences.py  notifications.py  profile.py  tasks.py  users.py  websocket.py
app/core/: app_config.py  auth.py  auth_config.py  config.py  dependencies.py  security.py  security_config.py  websocket_auth.py
app/db/: config.py  database.py
app/middleware/: security.py
app/models/: audit_log.py  file.py  notification.py  notification_preference.py  project.py  task.py  time_entry.py  user.py
app/schemas/: analytics.py  auth.py  comment.py  file.py  file_permission.py  notification.py  reports.py  skills.py  task.py  team.py  time_entry.py  user.py
app/services/: analytics_service.py  audit_service.py  file_service.py  milestone_service.py  notification_preference_service.py  task_service.py
app/websocket/: manager.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  3a1d70e5f4d7_add_avatar_url_to_users_table.py
projecxiq-api/: README.md  alembic.ini
projecxiq-api/app/: main.py
projecxiq-api/migrations/: env.py
projecxiq-api/tests/: test_auth_endpoints.py  test_comment_attachments.py  test_comment_mentions.py  test_comment_service.py  test_database.py  test_file_permissions.py  test_milestone_service.py  (+8 more)
scripts/: check_and_seed.py  seed_data.py  simple_seed.py
tests/: test_analytics_service.py  test_auth.py  test_auth_integration.py  test_file_upload.py  test_profile_service.py  test_project_service.py  test_reports.py  test_reports_integration.py  test_security.py  test_team_service.py  test_time_analytics.py  test_time_entry_approval.py  test_time_entry_service.py  test_user_service.py
(+32 files in other folders)
